--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
+    <meta name="theme-color" content="#000000">
+    <meta property="og:site_name" content="BY">
+    <meta property="og:title" content="Bigger Yoshi">
+    <meta property="og:description" content="Social media web application">
+    <meta property="og:image" content="https://i.imgur.com/n4BRgmP.png">
+    <meta property="og:url" content="https://bigger-yoshi.herokuapp.com/">
+    <meta property="og:type" content="website">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Social media web application for sharing your thoughts and ideas"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
